# tbot

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  user_flows.md
src/tbot/: __init__.py  __main__.py  models.py
src/tbot/services/: bundler.py  order_service.py  safety.py  wallets.py
src/tbot/telegram/: app.py  handlers.py
tests/: conftest.py  test_bundler.py
