[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tbot"
version = "0.1.0"
description = "Telegram trading bot with order bundling"
authors = [
  {name = "Telegram Bot Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21.0.0",
  "pydantic>=2.5",
  "httpx>=0.26",
  "tenacity>=8.2"
]

[project.optional-dependencies]
test = [
  "pytest>=7.4"
]

[tool.setuptools.packages.find]
where = ["src"]
